--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,6 +2,34 @@ spring:
   application:
     name: filmorate
 
+  # Общие настройки H2 (переопределяются в тестах)
+  datasource:
+    url: jdbc:h2:file:./data/filmorate;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
+    username: sa
+    password: passw0rd
+    driver-class-name: org.h2.Driver
+
+  sql:
+    init:
+      mode: never # если необходимо включить schema.sql поставить always
+
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+
+  # Общие JPA настройки
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+
+server:
+  port: 8080
+
+# Настройки Liquibase
+liquibase:
+  enabled: true
+  change-log: classpath:db/changelog/db.changelog-master.yaml # основной changelog файл
+
 logging:
   level:
     org:
